# arduino-AvrCMakeStartProject

./: .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.default.json
src/: Sketch.cpp
